--- a/Tiston,_Ernest_Danniel_R_Midterm_Exam.ipynb
+++ b/Tiston,_Ernest_Danniel_R_Midterm_Exam.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0zmxZ3Orj8LH2vu2fFjRC",
+      "authorship_tag": "ABX9TyOXh3eS5HJeT931q3WoFp3g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -99,7 +99,7 @@
         "id": "KZu3FsEIExjb",
         "outputId": "3efcb993-af7c-496a-cedf-e27eb9eb8529"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "id": "6gtiFBhLEyNr",
         "outputId": "30033e69-0ad5-4ad2-e627-3edd96ebcbe3"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,22 +151,22 @@
         "import array as arr\n",
         "arr = [5,4,3,2,1]\n",
         "arr.reverse()\n",
-        "print(\"The reverse order if the items in the array is \", arr)"
+        "print(\"The reverse order of the items in the array is \", arr)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5aNI0fJsKgMt",
-        "outputId": "61376bd9-fc5a-4b2b-8d6f-a5cd430759ef"
+        "outputId": "b316df14-358c-4545-de2e-78c7ec9f6678"
       },
-      "execution_count": 22,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The reverse order if the items in the array is  [1, 2, 3, 4, 5]\n"
+            "The reverse order of the items in the array is  [1, 2, 3, 4, 5]\n"
           ]
         }
       ]
@@ -188,7 +188,7 @@
         "id": "P3LQg525Kge0",
         "outputId": "b2c8b153-3be3-45a4-d417-8d8f67312815"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
